--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@justforlxz/tools",
-  "version": "1.4.5",
+  "name": "@haruyukilxz/tools",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
