--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "dependencies": {
     "@octokit/auth-app": "^4.0.4",
+    "@octokit/core": "^4.0.4",
     "@octokit/request-error": "^3.0.0",
     "@octokit/rest": "^18.12.0",
     "@octokit/types": "^6.39.0",
