--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@octokit/request-error": "^3.0.0",
     "@octokit/rest": "^18.12.0",
     "@octokit/types": "^6.39.0",
+    "axios": "^0.27.2",
     "commander": "^9.4.0",
     "js-yaml": "^4.1.0",
+    "readline": "^1.3.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
